change : link to css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property=”og:type” content=”Pourquoi web_agency?” />
     <meta property=”og:image” content="../assets/logo.png"/>
     <title>web_agency</title>
-    <link rel="stylesheet" href="../agency_web/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <nav class="container_navbar">
             <div class="navbar">
                 <a href="#home">
-                    <img src="../agency_web/assets/logo.png" alt="logo_agency">
+                    <img src="./assets/logo.png" alt="logo_agency">
                 </a>
            
                 <ul>
@@ -37,7 +37,7 @@
             <div class="carousel-items">
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="../agency_web/assets/bg1.jpg"
+                        <img src="./assets/bg1.jpg"
                             alt="photo d une jeune fille avec les doigts pleins de peintures multicolores" />
                         <div class="card-content">
                             <h1><span class="blue">WEBAGENCY  :</span> <span class="white"> L'AGENCE DE TOUS VOS PROJETS !</span></h2>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="../agency_web/assets/bg2.jpg" alt="photo d'un jeune garçon avec un mégaphone" />
+                        <img src="./assets/bg2.jpg" alt="photo d'un jeune garçon avec un mégaphone" />
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
             </div>
             <div class="container_service_bloc">
             <div class="container_image">
-                <img src="../agency_web/assets/main-feature.png" alt=" photo d'un ordinateur APPLE">
+                <img src="./assets/main-feature.png" alt=" photo d'un ordinateur APPLE">
             </div>
             <div class="container_list">
                 <div class="icone_ux">
@@ -140,7 +140,7 @@
             </div>
             <div class="galery">
                 <figure>
-                    <img src="../agency_web/assets/01.jpg" alt="un nez avec des lunettes">
+                    <img src="./assets/01.jpg" alt="un nez avec des lunettes">
                     <figcaption>
                         <h4>Lunette en Folie</h4>
                         <p>Les lunettes qui ont du pif</p>
@@ -148,7 +148,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="../agency_web/assets/02.jpg" alt="un lapin en papier">
+                    <img src="./assets/02.jpg" alt="un lapin en papier">
                     <figcaption>
                         <h4>Lapin en Folie</h4>
                         <p>Vive les lapins</p>
@@ -156,7 +156,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="../agency_web/assets/03.jpg" alt="logo pompadour">
+                    <img src="./assets/03.jpg" alt="logo pompadour">
                     <figcaption>
                         <h4>Pompadour en Folie</h4>
                         <p>Pompo Pidou</p>
@@ -164,7 +164,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="../agency_web/assets/04.jpg" alt="un fond jaune avec du pliage a effectuer">
+                    <img src="./assets/04.jpg" alt="un fond jaune avec du pliage a effectuer">
                     <figcaption>
                         <h4>Cahier en Folie</h4>
                         <p>Les cahiers qui n'ont pas froid</p>
@@ -172,7 +172,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="../agency_web/assets/05.jpg" alt="2 sacs en carton">
+                    <img src="./assets/05.jpg" alt="2 sacs en carton">
                     <figcaption>
                         <h4>Shopping en Folie</h4>
                         <p>Les sacs qui ne cèdent pas</p>
@@ -180,7 +180,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="../agency_web/assets/06.jpg" alt="paysage en dessin avec des batiments">
+                    <img src="./assets/06.jpg" alt="paysage en dessin avec des batiments">
                     <figcaption>
                         <h4>Monde en Folie</h4>
                         <p>Les batiments qui ne se démontent pas</p>
@@ -188,7 +188,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="../agency_web/assets/07.jpg" alt="des bras qui tir une fusée">
+                    <img src="./assets/07.jpg" alt="des bras qui tir une fusée">
                     <figcaption>
                         <h4>Astronaute en Folie</h4>
                         <p>Les étoiles qui brillent</p>
@@ -196,7 +196,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="../agency_web/assets/08.jpg" alt="plusieurs accessoires de bureau be theme">
+                    <img src="./assets/08.jpg" alt="plusieurs accessoires de bureau be theme">
                     <figcaption>
                         <h4>Working en Folie</h4>
                         <p>Le travail c'est la santé</p>
